--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<modules>
 		<module>plugins</module>
 		<module>features</module>
-		<!--<module>tests</module>-->
+		<module>tests</module>
 		<module>releng</module>
 	</modules>
 
